--- a/Northwind.Web/Pages/Suppliers.cshtml
+++ b/Northwind.Web/Pages/Suppliers.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @using Northwind.Shared
-
 @model Northwind.Web.Pages.SuppliersModel
+@addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
 }
 
@@ -32,4 +32,23 @@
         </tbody>
 
     </table>
+
+    <div class="row">
+        <p>Enter details for a new supplier:</p>
+        <form method="post">
+            <div>
+                <input asp-for="Supplier.CompanyName"
+                       placeholder="Company Name" />
+            </div>
+            <div>
+                <input asp-for="Supplier.Country"
+                       placeholder="Country" />
+            </div>
+            <div>
+                <input asp-for="Supplier.Phone"
+                       placeholder="Phone number" />
+            </div>
+            <input type="submit" />
+        </form>
+    </div>
 </div>
